tipos de selectores

--- a/selectores-3.html
+++ b/selectores-3.html
@@ -12,6 +12,12 @@
         p::first-letter {
             color: rgb(50, 204, 83);
         }
+        p::before {
+            content: "🥳";
+        }
+        p::after {
+            content: "🤩";
+        }
         p:hover {
             color: rgb(12, 41, 209);
         }
@@ -27,6 +33,6 @@
         <p>Master</p>
         <p>Lo MEJOR</p>
     </div>
-
+    
 </body>
 </html>
