color de selectores

--- a/selectores-3.html
+++ b/selectores-3.html
@@ -24,6 +24,9 @@
         div p:nth-child(2) {
             color: darkmagenta;
         }
+        ::placeholder {
+            color: darksalmon;
+        }
     </style>
 </head>
 <body>
@@ -33,6 +36,7 @@
         <p>Master</p>
         <p>Lo MEJOR</p>
     </div>
+    <input type="text" placeholder="name">
     
 </body>
 </html>
