--- a/posicionamiento.html
+++ b/posicionamiento.html
@@ -7,30 +7,30 @@
     <title>Document</title>
     <style>
         .container {
-            display: flex;
-            background: papayawhip;
-            justify-content: center;
-            align-items: center;
+            width: 200px;
             height: 200px;
-            flex-direction: column;
+            background: lightcoral;
+            position: relative;
+            top: 20px;
         }
         .item {
-            width: 30px;
-            height: 30px;
-            background: rgb(0, 128, 38);
+            width: 20px;
+            height: 20px;
+            background: red;
+            position: absolute;
+            right: 0;
         }
-        .container .item:nth-child(2n + 1) {
-            background: lightcoral;
+        nav  {
+            width: 100%;
+            height: 60px;
+            background: rgb(13, 109, 109);
         }
-    
     </style>
 </head>
 <body>
     <div class="container">
         <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
     </div>
+    <nav></nav>
 </body>
 </html>
